tests/NormalTests/paczka1/fuzzy1/71562937.err
Error in line 12: CbTX A38 45,2
Error in line 19: Z9i2oz A38 83,7
Error in line 15: xexiyiJDH A38 14,4
Error in line 33: xexiyiJDH A705 83,8
Error in line 24: 8JVZM A38 79,2
